--- a/project/assets/common/lang/zh.json
+++ b/project/assets/common/lang/zh.json
@@ -15,7 +15,8 @@
   },
   "button": {
     "save": "保存",
-    "cancel": "取消"
+    "cancel": "取消",
+    "confirm": "确认"
   },
   "product": {
     "name": "名称",
