--- a/project/assets/common/lang/en.json
+++ b/project/assets/common/lang/en.json
@@ -16,7 +16,8 @@
   "button": {
     "save": "Save",
     "cancel": "Cancel",
-    "confirm": "Confirm"
+    "confirm": "Confirm",
+    "settlement": "Settlement"
   },
   "product": {
     "name": "Name",
