--- a/project/assets/common/lang/en.json
+++ b/project/assets/common/lang/en.json
@@ -17,7 +17,8 @@
     "save": "Save",
     "cancel": "Cancel",
     "confirm": "Confirm",
-    "settlement": "Settlement"
+    "settlement": "Settlement",
+    "add":"Add"
   },
   "product": {
     "name": "Name",
